fixed cti training page alignment

--- a/attack-theme/static/style/_layouts.scss
+++ b/attack-theme/static/style/_layouts.scss
@@ -1046,6 +1046,7 @@ a.partial-underline {
     position: -webkit-sticky;
     position: sticky;
     top: 14rem;
+    word-wrap: normal;
 	border-radius: 0.75em;
 }
 /******/
